force-app/main/default/objects/Patient_Record__c/Patient_Record__c.object-meta.xml
<CustomObject>
    <description>Store the records about patients visiting the hospital</description>
    <label>Patient Record</label>
    <nameField>
        <label>Patient Records Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>