force-app/main/default/objects/Patient_Record__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <label>Day</label>
    <type>DateTime</type>
</CustomField>