force-app/main/default/objects/Patient_Record__c/fields/Medical_Condition__c.field-meta.xml
<CustomField>
    <fullName>Medical_Condition__c</fullName>
    <description>A little description of the visit.</description>
    <label>Medical Condition</label>
    <length>250</length>
    <type>Text</type>
</CustomField>