force-app/main/default/objects/Patient_Record__c/fields/Recorded_By__c.field-meta.xml
<CustomField>
    <fullName>Recorded_By__c</fullName>
    <description>Indicates the name of the medical practitioner who added the record</description>
    <label>Recorded By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>